# note-recognition

./: .clang-tidy  .directory  .gitignore  CMakeLists.txt  LICENSE  README.md  jenkins.sh
include/noter/: hello.hpp
include/noter-sound/: sound.hpp
lib/: CMakeLists.txt
lib/noter/: CMakeLists.txt  hello.cpp
lib/noter-sound/: CMakeLists.txt  sound.cpp
libs/: CMakeLists.txt
libs/noter/: CMakeLists.txt  hello.cpp
libs/noter-sound/: sound.cpp
src/: CMakeLists.txt
src/noter-gui/: CMakeLists.txt  hello.ui  main.cpp  main.hpp
tools/: default.nix  format.bash.in  lint-clang.bash.in  note-recognition.nix
